--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,112 @@
+/* ============================ *\
+	GLOBAL
+\* ============================ */
+
+body{
+	font-family: 'Alegreya Sans', sans-serif;
+}
+
+img{
+	max-width: 100%;
+}
+
 h1{
 	font-size: 55px;
+}
+
+
+/* ============================ *\
+	HEADER
+\* ============================ */
+
+header{
+	background: #ededed url('../img/header-bg.png') no-repeat;
+	background-size: contain;
+	background-position: 100%;
+}
+
+.header-container{
+	display: flex;
+	display: -webkit-flex;
+}
+
+.logo{
+	width: 76px;
+	height: 76px;
+	margin: 1em;
+}
+
+.divider{
+	width: 79px;
+	height: 47px;
+	border-bottom: 1px solid #ca5362;
+	-webkit-transform: translateY(11px) translateX(0px) rotate(-82deg);
+	position: relative;
+	top: 15px;
+	left: 12px;
+}
+
+.page-title{
+	color: #575756;
+	font-size: 55px;
+	font-weight: 100;
+	font-style: italic;
+	text-transform: uppercase;
+	margin: .5em 0;
+	position: relative;
+	left: .5em;
+	transform: scale(1.2,1);
+	-webkit-transform: scale(1.2,1);
+}
+
+.info{
+	font-size: 18px;
+	color: #575756;
+	font-weight: 100;
+	font-style: italic;
+	text-transform: uppercase;
+}
+
+.info ul{
+	list-style: none;
+	padding-left: 1em;
+}
+
+/* ============================ *\
+	FOOTER
+\* ============================ */
+
+footer{
+	background: #2d2d2c;
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	display: flex;
+	display: -webkit-flex;
+	padding: 0 1em;
+}
+
+.footer-title{
+	color: #fff;
+	font-size: 25px;
+	font-weight: 100;
+	font-style: italic;
+	text-transform: uppercase;
+	transform: scale(1.2,1);
+	-webkit-transform: scale(1.2,1);
+	width: 140px;
+	position: relative;
+	left: 1em;
+	margin: 23px 0;
+}
+
+.footer-divider{
+	width: 45px;
+	height: 3px;
+	background: #ca5362;
+	border-radius: 10px;
+	-webkit-transform: translateY(11px) translateX(0px) rotate(90deg);
+	position: relative;
+	top: 23px;
+	left: 0px;
 }
