--- a/css/reveal.css
+++ b/css/reveal.css
@@ -57,7 +57,7 @@ body {
 }
 
 ::selection {
-	background: #FF5E99;
+	background: #ca5362 !important;
 	color: #fff;
 	text-shadow: none;
 }
@@ -234,8 +234,8 @@ body {
 .reveal img,
 .reveal video,
 .reveal iframe {
-	max-width: 95%;
-	max-height: 95%;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 /** Prevents layering issues in certain browser/transition combinations */
@@ -389,11 +389,11 @@ body {
 .reveal .controls {
 	display: none;
 	position: fixed;
-	width: 110px;
-	height: 110px;
+	width: 100%;
+	height: 75%;
 	z-index: 30;
 	right: 10px;
-	bottom: 10px;
+	top: 7em;
 }
 
 .reveal .controls div {
@@ -422,42 +422,30 @@ body {
 }
 
 	.reveal .controls div.navigate-left {
-		top: 42px;
-
-		border-right-width: 22px;
-		border-right-color: #eee;
+		left: 0;
 	}
 		.reveal .controls div.navigate-left.fragmented {
 			opacity: 0.3;
 		}
 
 	.reveal .controls div.navigate-right {
-		left: 74px;
-		top: 42px;
+		right: 0;
 
-		border-left-width: 22px;
-		border-left-color: #eee;
 	}
 		.reveal .controls div.navigate-right.fragmented {
 			opacity: 0.3;
 		}
 
 	.reveal .controls div.navigate-up {
-		left: 42px;
-
-		border-bottom-width: 22px;
-		border-bottom-color: #eee;
+		left: 50%;
 	}
 		.reveal .controls div.navigate-up.fragmented {
 			opacity: 0.3;
 		}
 
 	.reveal .controls div.navigate-down {
-		left: 42px;
-		top: 74px;
-
-		border-top-width: 22px;
-		border-top-color: #eee;
+		bottom: 0;
+		left: 50%;
 	}
 		.reveal .controls div.navigate-down.fragmented {
 			opacity: 0.3;
@@ -525,14 +513,12 @@ body {
 
 .reveal .slides {
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 50%;
-	top: 50%;
+	width: 100% !important;
+	height: 100% !important;
 
 	overflow: visible;
 	z-index: 1;
-	text-align: center;
+	text-align: left;
 
 	-webkit-transition: -webkit-perspective .4s ease;
 	   -moz-transition: -moz-perspective .4s ease;
@@ -560,7 +546,6 @@ body {
 	display: none;
 	position: absolute;
 	width: 100%;
-	padding: 20px 0px;
 
 	z-index: 10;
 	line-height: 1.2em;
@@ -622,8 +607,7 @@ body {
 }
 
 .reveal .slides>section {
-	left: -50%;
-	top: -50%;
+
 }
 
 .reveal .slides>section.stack {
@@ -636,19 +620,21 @@ body {
 	display: block;
 	z-index: 11;
 	opacity: 1;
+	height: 100%;
 }
 
 .reveal.center,
 .reveal.center .slides,
 .reveal.center .slides section {
 	min-height: auto !important;
+	top: 0 !important;
 }
 
 /* Don't allow interaction with invisible slides */
 .reveal .slides>section.future,
 .reveal .slides>section>section.future,
 .reveal .slides>section.past,
-.reveal .slides>section>section.past {
+§>section>section.past {
 	pointer-events: none;
 }
 
