--- a/css/main.css
+++ b/css/main.css
@@ -17,12 +17,15 @@ h1{
 .fb{
 	display: flex;
 	display: -webkit-flex;
+	height: 100%;
 }
 
 iframe{
 	width: 100%;
 	height: 100%;
 }
+
+
 /* ============================ *\
 	HEADER
 \* ============================ */
@@ -154,44 +157,52 @@ vertical-align: middle;
 \* ============================ */
 
 .reveal .controls div.navigate-left {
-	background: url(../img/arrow-left.png) no-repeat;
-	width: 15px;
+	background: rgba(255, 255, 255, 0.5) url(../img/arrow-left.png) no-repeat;
+	background-position: 50% 50%;
+	width: 29px;
 	height: 29px;
 	display: block;
 	margin: 0;
 	padding: 0;
 	opacity: 0;
+	border-radius: 5px;
 }
 
 
 .reveal .controls div.navigate-right{
-	background: url(../img/arrow-right.png) no-repeat;
-	width: 15px;
+	background: rgba(255, 255, 255, 0.5) url(../img/arrow-right.png) no-repeat;
+	background-position: 50% 50%;
+	width: 29px;
 	height: 29px;
 	display: block;
 	margin: 0;
 	padding: 0;
 	opacity: 0;
+	border-radius: 5px;
 }
 
 .reveal .controls div.navigate-up{
-	background: url(../img/arrow-up.png) no-repeat;
+	background: rgba(255, 255, 255, 0.5) url(../img/arrow-up.png) no-repeat;
+	background-position: 50% 9px;
 	width: 29px;
-	height: 15px;
+	height: 29px;
 	display: block;
 	margin: 0;
 	padding: 0;
 	opacity: 0;
+	border-radius: 5px;
 }
 
 .reveal .controls div.navigate-down{
-	background: url(../img/arrow-down.png) no-repeat;
+	background: rgba(255, 255, 255, 0.5) url(../img/arrow-down.png) no-repeat;
+	background-position: 50% 9px;
 	width: 29px;
-	height: 15px;
+	height: 29px;
 	display: block;
 	margin: 0;
 	padding: 0;
 	opacity: 0;
+	border-radius: 5px;
 }
 
 
@@ -230,12 +241,14 @@ vertical-align: middle;
 	width: 50%;
 }
 
-.one-half > img {
+.slide1 .one-half > img {
 	width: 100%;
 	height: auto;
 	max-height: 100%;
 	max-width: 100%;
 	clip-path: polygon(0% 0%, 0% 100%, 92% 100%, 100% 0%);
+	-0-clip-path: polygon(0% 0%, 0% 100%, 92% 100%, 100% 0%);
+	-ms-clip-path: polygon(0% 0%, 0% 100%, 92% 100%, 100% 0%);
 	-webkit-clip-path: polygon(0% 0%, 0% 100%, 92% 100%, 100% 0%);
 }
 
@@ -263,6 +276,8 @@ padding: 3em 0em 0 3em;
 width: 95%;
 background: #fff;
 clip-path: polygon(0% 0%, 0% 100%, 73% 100%, 79% 64%,72% 0%);
+-0-clip-path: polygon(0% 0%, 0% 100%, 73% 100%, 79% 64%,72% 0%);
+-ms-clip-path: polygon(0% 0%, 0% 100%, 73% 100%, 79% 64%,72% 0%);
 -webkit-clip-path: polygon(0% 0%, 0% 100%, 73% 100%, 79% 64%,72% 0%);
 }
 
@@ -286,6 +301,8 @@ clip-path: polygon(0% 0%, 0% 100%, 73% 100%, 79% 64%,72% 0%);
 	color: #fff;
 	background: #CC5260;
 	clip-path: polygon(0% 0%, 1% 50%, 0% 100%, 72% 100%, 75% 50%,72% 0%);
+	-o-clip-path: polygon(0% 0%, 1% 50%, 0% 100%, 72% 100%, 75% 50%,72% 0%);
+	-ms-clip-path: polygon(0% 0%, 1% 50%, 0% 100%, 72% 100%, 75% 50%,72% 0%);
 	-webkit-clip-path: polygon(0% 0%, 1% 50%, 0% 100%, 72% 100%, 75% 50%,72% 0%);
 	padding: 1em 13em 1em 1em !important;
 }
@@ -316,9 +333,8 @@ clip-path: polygon(0% 0%, 0% 100%, 73% 100%, 79% 64%,72% 0%);
 	background: #505051;
 }
 
-/* ============================ *\
-	SLIDE 3
-\* ============================ */
+/*  SLIDE 2.1
+------------------------- */
 
 .dark-bg{
 	background: #2D2D2C url(../img/dark-bg.png) no-repeat;
@@ -345,3 +361,60 @@ clip-path: polygon(0% 0%, 0% 100%, 73% 100%, 79% 64%,72% 0%);
 	margin: auto;
 	background: #C6C6C6;
 }
+
+/* ============================ *\
+	SLIDE 3
+\* ============================ */
+
+.slide3 .one-half.red-bg{
+	background: #CC5260;
+	clip-path: polygon(0% 0%, 0% 100%, 85% 100%, 99% 0%);
+	-webkit-clip-path: polygon(0% 0%, 0% 100%, 85% 100%, 99% 0%);
+	width: 52%;
+	color: #2D2D2C;
+	padding: 4em
+}
+
+p.white{
+	color: #fff;
+
+}
+
+.slide3 .one-half__content{
+	
+}
+
+.one-half.img {
+margin-left: -7%;
+}
+
+.one-half.img img{
+	width: 100%;
+	height: 100%;
+}
+
+p.dark{
+	color: #2D2D2C;
+}
+
+p.red{
+	color: #CC5260;
+}
+
+.slide3 .one-half.dark-bg{
+	background: #2D2D2C;
+	clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 85% 0%);
+	-webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 85% 0%);
+	width: 52%;
+	color: #2D2D2C;
+	padding: 4em;
+	text-align: left;
+}
+
+.slide3 .one-half.img {
+	margin-left: -10%;
+	width: 59%;
+}
+
+.slide3 .one-half.dark-bg
+
