--- a/css/reveal.css
+++ b/css/reveal.css
@@ -302,20 +302,38 @@ font-weight: bold;
 
 .reveal q,
 .reveal blockquote {
-	quotes: none;
+	quotes: "\201C""\201D""\2018""\2019";
 }
 
 .reveal blockquote {
 	display: block;
 	position: relative;
-	width: 70%;
-	margin: 5px auto;
-	padding: 5px;
-
+	background-image: url(../img/quotes-start.png);
+	background-position: top left;
+	background-repeat: no-repeat;
+	text-indent: 39px;
+	font-size: 29px;
+	text-transform: uppercase;
+	color: #fff;
+	font-weight: 100;
 	font-style: italic;
-	background: rgba(255, 255, 255, 0.05);
-	box-shadow: 0px 0px 2px rgba(0,0,0,0.2);
+	transform: scale(1.2,1);
+	-webkit-transform: scale(1.2,1);
+	width: 39%;
+	line-height: 1.4;
+	margin-left: auto;
+	margin-right: 4em;
+	padding-top: .2em;
 }
+
+.reveal blockquote span{
+	display: block;
+	background-image: url(../img/quotes-end.png);
+	background-repeat: no-repeat;
+	background-position: 100% 59%;
+	padding-right: 1em;
+}
+
 	.reveal blockquote p:first-child,
 	.reveal blockquote p:last-child {
 		display: inline-block;
